fix: UI: align of specVal-0

--- a/options_ui/options.css
+++ b/options_ui/options.css
@@ -34,6 +34,12 @@ div.loud {
   font-weight: bold;
   color: red;
 }
+select {
+  vertical-align: top;
+}
+textarea {
+  background-color: #DFE2F1;
+}
 input[type="text"] {
   background-color: #DFE2F1;
 }
